feat: add styles to loader component and page component :lipstick:

--- a/src/app/core/components/loader/loader.component.html
+++ b/src/app/core/components/loader/loader.component.html
@@ -1,1 +1,6 @@
-<p>loader works!</p>
+<div class="container">
+  <div class="content">
+    <img class="poker-chip" src="/images/poker-chip.svg" alt="">
+    <img src="/images/pragma-logo.svg" alt="">
+  </div>
+</div>
