feat: add colors to the project :sparkles:

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div class="container">
+  <app-poker-chip />
+  <div class="section-title"></div>
+  <div class="section-player">
+    <div class="player-logo"></div>
+    <div class="invite-players"></div>
+  </div>
+</div>
