feat: add typografies to the project :sparkles:

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -2,7 +2,9 @@
   <app-poker-chip />
   <div class="section-title"></div>
   <div class="section-player">
-    <div class="player-logo"></div>
+    <div class="player-logo">
+      LU
+    </div>
     <div class="invite-players"></div>
   </div>
 </div>
