--- a/src/app/design-system/atoms/components/button-field/button-field.component.html
+++ b/src/app/design-system/atoms/components/button-field/button-field.component.html
@@ -1,3 +1,22 @@
-<button [type]="type">
+<button
+  [type]="type"
+  [disabled]="disabled"
+  [class]="{
+    'color-dark-purple': color === ButtonFieldColor.DarkPurple,
+    'color-dark-white': color === ButtonFieldColor.DarkWhite,
+    'color-ligth-purple': color === ButtonFieldColor.LigthPurple,
+
+    'size-medium': size === ButtonFieldSize.Medium,
+    'size-small': size === ButtonFieldSize.Small,
+
+    'variant-primary': variant === ButtonFieldVariant.Primary,
+    'variant-secondary': variant === ButtonFieldVariant.Secondary,
+    'variant-tertiary': variant === ButtonFieldVariant.Tertiary,
+
+    'icon-none': icon === ButtonFieldIcon.None,
+    'icon-left': icon === ButtonFieldIcon.Left,
+    'icon-right': icon === ButtonFieldIcon.Right,
+  }"
+>
   <ng-content></ng-content>
 </button>
