--- a/src/app/core/styles/_colors.scss
+++ b/src/app/core/styles/_colors.scss
@@ -5,7 +5,9 @@ $pds-color-primary-purple-500: #6429CD;
 $pds-color-primary-purple-700: #330072;
 $pds-color-primary-purple-900: #1F0D3F;
 $pds-color-primary-purple-main: $pds-color-primary-purple-500;
+$pds-color-primary-purple-500-opacity-240: rgba($pds-color-primary-purple-500, 0.24);
 $pds-color-primary-purple-500-opacity-300: rgba($pds-color-primary-purple-500, 0.3);
+$pds-color-primary-purple-500-opacity-400: rgba($pds-color-primary-purple-500, 0.4);
 
 $pds-color-primary-gray-50: #D8D8D6;
 $pds-color-primary-gray-300: #75756D;
