--- a/src/app/design-system/atoms/components/button-field/button-field.component.html
+++ b/src/app/design-system/atoms/components/button-field/button-field.component.html
@@ -1,7 +1,7 @@
 <button
   [type]="type"
   [disabled]="disabled"
-  [class]="{
+  [ngClass]="{
     'color-dark-purple': color === ButtonFieldColorEnum.DarkPurple,
     'color-dark-white': color === ButtonFieldColorEnum.DarkWhite,
     'color-ligth-purple': color === ButtonFieldColorEnum.LigthPurple,
