feat: update pocker-chip-component :sparkles:

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -26,10 +26,9 @@
       'hidden': headerStatus === HeaderStatusEnum.CreateGame,
     }"
   >
-    @if (headerStatus !== HeaderStatusEnum.CreatePlayerOrViewGame) {
-    <!-- @if (headerStatus === HeaderStatusEnum.CreatePlayerOrViewGame) { -->
+    @if (headerStatus === HeaderStatusEnum.CreatePlayerOrViewGame) {
       <app-avatar-field
-        text="JREA"
+        text="LU"
         [variant]="avatarFieldVariant"
         [size]="avatarFieldSize"
       />
