--- a/src/app/design-system/atoms/components/poker-chip/poker-chip.component.html
+++ b/src/app/design-system/atoms/components/poker-chip/poker-chip.component.html
@@ -1,1 +1,6 @@
-<img class="poker-chip" src="/svgs/poker-chip.svg" alt="">
+<app-avatar-field
+  urlImage="/svgs/poker-chip.svg"
+  icon=""
+  [variant]="AvatarFieldVariantEnum.Icon"
+  [size]="AvatarFieldSizeEnum.Large"
+/>
