--- a/src/app/pages/create-game/create-game.component.html
+++ b/src/app/pages/create-game/create-game.component.html
@@ -2,6 +2,12 @@
   @if(showLoader) {
     <app-loader />
   } @else {
-    <!-- <p>create-game-page works!!!!!!!!!</p> -->
+    <div class="container">
+      <app-input-field
+        headerText="Nombra la partida"
+        [(value)]="gameName"
+      />
+      <app-button-field [disabled]="true">Crear partida</app-button-field>
+    </div>
   }
 </app-page>
