--- a/src/app/pages/create-game/create-game.component.scss
+++ b/src/app/pages/create-game/create-game.component.scss
@@ -1,3 +1,27 @@
-p {
-  margin: 0;
+@use 'typographies' as typographies;
+@use 'colors' as colors;
+
+.container {
+  --height-header: 126px;
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
+  margin: calc(var(--height-header) * -1) auto 0 auto;
+  width: fit-content;
+
+  p {
+    margin: 0;
+    @include typographies.pds-font-paragraph-03-bold;
+    color: colors.$pds-color-white-50;
+  }
+
+  app-button-field {
+    margin-top: 20px;
+    justify-self: center;
+  }
+
+  input {
+    margin-top: 8px;
+    width: 292px;
+  }
 }
