feat: update page join-game :sparkles:

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -26,7 +26,7 @@
       'hidden': headerStatus === HeaderStatusEnum.CreateGame,
     }"
   >
-    @if (headerStatus === HeaderStatusEnum.CreatePlayerOrViewGame) {
+    @if (headerStatus === HeaderStatusEnum.InsideTheGame) {
       <app-avatar-field
         text="LU"
         [variant]="avatarFieldVariant"
