--- a/src/app/core/styles/_colors.scss
+++ b/src/app/core/styles/_colors.scss
@@ -9,6 +9,7 @@ $pds-color-primary-purple-500-opacity-40: rgba($pds-color-primary-purple-500, 0.
 $pds-color-primary-purple-500-opacity-240: rgba($pds-color-primary-purple-500, 0.24);
 $pds-color-primary-purple-500-opacity-300: rgba($pds-color-primary-purple-500, 0.3);
 $pds-color-primary-purple-500-opacity-400: rgba($pds-color-primary-purple-500, 0.4);
+$pds-color-primary-purple-500-opacity-600: rgba($pds-color-primary-purple-500, 0.6);
 
 $pds-color-primary-gray-50: #D8D8D6;
 $pds-color-primary-gray-300: #75756D;
@@ -24,6 +25,7 @@ $pds-color-primary-indigo-700: #8A8AFF;
 $pds-color-primary-indigo-900: #4646FF;
 $pds-color-primary-indigo-main: $pds-color-primary-indigo-500;
 $pds-color-primary-indigo-500-opacity-200: rgba($pds-color-primary-indigo-500, 0.2);
+$pds-color-primary-indigo-500-opacity-600: rgba($pds-color-primary-indigo-500, 0.6);
 
 /* Secondary Palette */
 $pds-color-secondary-fuchsia-50: #FDF9FF;
