--- a/src/app/pages/join-game/join-game.component.html
+++ b/src/app/pages/join-game/join-game.component.html
@@ -1,4 +1,38 @@
 <app-page>
-  <p>join-game works!</p>
-  {{ gameUuid }}
+  <app-modal>
+    <div class="container">
+      <app-input-field
+        headerText="Tu nombre"
+        [(value)]="playerName"
+        [isValid]="isValidPlayerName"
+        [isInvalid]="isInvalidPlayerName"
+      />
+
+      <div class="roles">
+        <div class="role">
+          <span>Jugador</span>
+          <app-radio-button-field
+            [(selectedOption)]="currentRole"
+            name="role"
+            [value]="RoleEnum.Player"
+          />
+        </div>
+
+        <div class="role">
+          <span>Espectador</span>
+          <app-radio-button-field
+            [(selectedOption)]="currentRole"
+            name="role"
+            [value]="RoleEnum.Spectator"
+          />
+        </div>
+      </div>
+
+      <app-button-field
+        [disabled]="!playerName || !currentRole || isLoading"
+        [color]="ButtonFieldColorEnum.DarkWhite"
+        (click)="handleContinue()"
+      >Continuar</app-button-field>
+    </div>
+  </app-modal>
 </app-page>
