--- a/src/app/design-system/molecules/components/toast/toast.component.scss
+++ b/src/app/design-system/molecules/components/toast/toast.component.scss
@@ -4,13 +4,13 @@
 
 .container {
   --toast-spacing: 8px;
-  min-width: 100%;
-  min-height: 100vh;
+  width: fit-content;
+  height: auto;
   display: flex;
   position: fixed;
   z-index: 110;
-  top: 0;
-  left: 0;
+  bottom: 0;
+  right: 0;
   flex-direction: column-reverse;
   padding-right: var(--toast-spacing);
   padding-bottom: calc(var(--toast-spacing) + 4px);
@@ -19,8 +19,8 @@
   .toast {
     padding: 20px;
     border-radius: borderRadius.$pds-border-radius-xl;
-    width: 100%;
-    max-width: 540px;
+    width: fit-content;
+    max-width: 400px;
     height: fit-content;
     margin-left: auto;
     display: flex;
@@ -86,6 +86,10 @@
       &.alert {
         color: colors.$pds-color-gray-800;
       }
+    }
+
+    .content {
+      width: 100%;
     }
 
     .title-text {
