--- a/src/app/pages/create-game/create-game.component.html
+++ b/src/app/pages/create-game/create-game.component.html
@@ -11,5 +11,6 @@
       [color]="ButtonFieldColorEnum.DarkWhite"
       (click)="createGame()"
     >Crear partida</app-button-field>
+    <app-toast />
   </div>
 </app-page>
