fix: update page-component :bug:

--- a/src/app/core/components/page/page.component.html
+++ b/src/app/core/components/page/page.component.html
@@ -5,6 +5,9 @@
 
   @if (!(loaderService.isLoading$ | async)) {
     <app-header />
-    <ng-content></ng-content>
   }
+
+  <app-toast />
+
+  <router-outlet />
 </div>
