fix: solve bugs in services :bug:

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,7 @@
-<div class="container">
+<div
+  class="container"
+  [ngClass]="{ hidden: (loaderService.isLoading$ | async) }"
+>
   <div class="section-logo">
     <app-poker-chip />
     <div
