--- a/src/app/core/styles/_colors.scss
+++ b/src/app/core/styles/_colors.scss
@@ -10,6 +10,7 @@ $pds-color-primary-purple-500-opacity-240: rgba($pds-color-primary-purple-500, 0
 $pds-color-primary-purple-500-opacity-300: rgba($pds-color-primary-purple-500, 0.3);
 $pds-color-primary-purple-500-opacity-400: rgba($pds-color-primary-purple-500, 0.4);
 $pds-color-primary-purple-500-opacity-600: rgba($pds-color-primary-purple-500, 0.6);
+$pds-color-primary-purple-900-opacity-980: rgba($pds-color-primary-purple-900, 0.98);
 
 $pds-color-primary-gray-50: #D8D8D6;
 $pds-color-primary-gray-300: #75756D;
