refactor: move logic of toast to toast-container :sparkles:

--- a/src/app/core/components/page/page.component.html
+++ b/src/app/core/components/page/page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-loader />
   <app-header />
-  <app-toast />
+  <app-toast-container />
   <router-outlet />
 </div>
