--- a/src/app/design-system/atoms/avatar-field/avatar-field.component.html
+++ b/src/app/design-system/atoms/avatar-field/avatar-field.component.html
@@ -1,43 +1,17 @@
 <div
   class="avatar"
-  [ngClass]="{
-    'size-small': size === AvatarFieldSizeEnum.Small,
-    'size-medium': size === AvatarFieldSizeEnum.Medium,
-    'size-large': size === AvatarFieldSizeEnum.Large,
-    'size-extra-large': size === AvatarFieldSizeEnum.ExtraLarge,
-
-    'variant-icon': variant === AvatarFieldVariantEnum.Icon,
-    'variant-image': variant === AvatarFieldVariantEnum.Image,
-    'variant-text-purple': variant === AvatarFieldVariantEnum.TextPurple,
-    'variant-text-white': variant === AvatarFieldVariantEnum.TextWhite,
-    'variant-text-purple-ligth': variant === AvatarFieldVariantEnum.TextPurpleLigth,
-  }"
-  [style.background-image]="
-    [AvatarFieldVariantEnum.Icon, AvatarFieldVariantEnum.Image].includes(variant)
-      ? 'url(' + urlImage + ')'
-      : ''
-  "
+  [ngClass]="[classSize, classVariant]"
+  [style.background-image]="backgroundImageAvatar"
 >
-  @if (
-    [
-      AvatarFieldVariantEnum.TextPurple,
-      AvatarFieldVariantEnum.TextWhite,
-      AvatarFieldVariantEnum.TextPurpleLigth,
-    ].includes(variant)
-  ) {
+  @if (isVariantText) {
     {{ text | slice: 0:2 }}
   }
 
-  @if (variant === AvatarFieldVariantEnum.Icon) {
+  @if (isVariantIcon) {
     <div
       class="icon"
-      [ngClass]="{
-        'size-small': size === AvatarFieldSizeEnum.Small,
-        'size-medium': size === AvatarFieldSizeEnum.Medium,
-        'size-large': size === AvatarFieldSizeEnum.Large,
-        'size-extra-large': size === AvatarFieldSizeEnum.ExtraLarge,
-      }"
-      [style.background-image]="'url(' + icon + ')'"
+      [ngClass]="classSize"
+      [style.background-image]="backgroundImageIcon"
     ></div>
   }
 </div>
