--- a/src/app/design-system/molecules/toast/toast.component.html
+++ b/src/app/design-system/molecules/toast/toast.component.html
@@ -1,5 +1,5 @@
 <div class="toast" [ngClass]="classVariant">
-  @if(type === ToastType.StandardWithActions) {
+  @if(isTypeStandardWithActions) {
     <i-feather [name]="toastIcon" class="icon-variant" [ngClass]="classVariant" />
   }
 
@@ -7,7 +7,7 @@
     <div class="title-text" [class]="classVariant">{{ title }}</div>
     <div class="body-text" [ngClass]="classVariant">{{ body }}</div>
 
-    @if(type === ToastType.StandardWithActions) {
+    @if(isTypeStandardWithActions) {
       <div class="actions">
         <button class="action-primary" [ngClass]="classVariant">Button</button>
         <button class="action-secondary" [ngClass]="classVariant">Button</button>
