--- a/src/app/design-system/atoms/button-field/button-field.component.scss
+++ b/src/app/design-system/atoms/button-field/button-field.component.scss
@@ -7,6 +7,10 @@ button {
   border-radius: borderRadius.$pds-border-radius-full;
   padding: 12px 16px;
   user-select: none;
+
+  &:not(:disabled) {
+    cursor: pointer;
+  }
 }
 
 .size-small {
